src/pages/index.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

body {
  overflow: hidden;
  overflow-x: hidden;
  overflow-y: hidden;
  touch-action: none;
}

::-webkit-scrollbar {
  width: 0px;
}

